Updated seed mode settings in menu

--- a/ludum-dare-26-html/war/index.html
+++ b/ludum-dare-26-html/war/index.html
@@ -11,7 +11,7 @@
 		</style>
 	</head>
 	
-	<body>
+	<body style="background-color:#000000;">
 		<div align="center" id="embed-eu32k.ludumdare.ld26.GwtDefinition"></div>
 		<script type="text/javascript" src="eu32k.ludumdare.ld26.GwtDefinition/eu32k.ludumdare.ld26.GwtDefinition.nocache.js"></script>
 	</body>
